--- a/css/contact_me.css
+++ b/css/contact_me.css
@@ -1,21 +1,13 @@
 main {
-  padding-top: 2em;
-  min-height: 90vh;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
-}
-
-main {
   position: relative;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 100px;
+  margin-top: 2em;
+  padding: 1em 100px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 main:after {
