--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,21 @@
   display: none;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  padding-top: 2em;
+}
+
 a {
   text-decoration: none;
 }
