--- a/css/apl/logic_games/logic_games.css
+++ b/css/apl/logic_games/logic_games.css
@@ -1,52 +1,31 @@
-.title {
-  margin-block: 1em;
-  text-align: center;
+.cards {
+  margin: 0 1.5em;
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  gap: 2em;
+  padding-top: 30px;
 }
 
-.puzzles {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
-.container {
+.card {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1em;
-}
-
-.box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 12.5em;
-  aspect-ratio: 0.7;
-  padding-inline: 1.5625em;
+  padding-block: 1.5em;
+  box-sizing: border-box;
+  overflow: hidden;
+  border: 1px solid black;
   border-radius: 0.875em;
   box-shadow: 0 0 2em rgba(0, 0, 0, .3);
-  margin: 0.1875em;
 }
 
-.box__link {
-  text-decoration: none;
-  color: var(--clr-neutral-1000);
-}
-
-.box__img {
-  width: 12.5em;
+.card__img {
+  width: 80%;
   aspect-ratio: 1;
 }
 
-@media only screen and (min-width: 600px) {
-  .container {
-    flex-direction: row;
-    justify-content: center;
-    gap: 2em;
-  }
-
-  .container+* {
-    margin-top: 2em;
-  }
+p {
+  font-size: 1.5em;
+  margin-block: 0;
 }
