--- a/css/apl/logic_games/logic_games.css
+++ b/css/apl/logic_games/logic_games.css
@@ -13,19 +13,13 @@
   align-items: center;
   gap: 1em;
   padding-block: 1.5em;
-  box-sizing: border-box;
   overflow: hidden;
-  border: 1px solid black;
   border-radius: 0.875em;
   box-shadow: 0 0 2em rgba(0, 0, 0, .3);
+  color: var(--clr-neutral-1000);
 }
 
 .card__img {
   width: 80%;
   aspect-ratio: 1;
-}
-
-p {
-  font-size: 1.5em;
-  margin-block: 0;
 }
