--- a/css/base/header.css
+++ b/css/base/header.css
@@ -1,4 +1,3 @@
-/* Header */
 header {
   display: flex;
   align-items: center;
@@ -13,7 +12,7 @@ header {
 
 .name {
   font-family: var(--ff-accent);
-  font-size: 3.125rem;
+  font-size: 2.8rem;
   text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
   color: var(--clr-primary-300);
   z-index: 99;
@@ -50,8 +49,12 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
-  .logo {
-    width: 6.25em;
+  .name {
+    font-family: var(--ff-accent);
+    font-size: 2.5rem;
+    text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
+    color: var(--clr-primary-300);
+    z-index: 99;
   }
 
   .menu {
