--- a/css/base/header.css
+++ b/css/base/header.css
@@ -72,7 +72,7 @@ header {
     z-index: 98;
   }
 
-  .menu:before {
+  .menu::before {
     content: "";
     position: absolute;
     background: inherit;
