--- a/css/contact_me.css
+++ b/css/contact_me.css
@@ -1,16 +1,8 @@
 main {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2em;
-  padding: 1em 100px;
-  font-family: 'Quicksand', sans-serif;
+  padding-inline: 1em;
 }
 
-main:after {
+main::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -32,6 +24,7 @@ main:after {
   text-align: center;
   background-color: var(--clr-neutral-000);
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  margin: auto;
 }
 
 .left {
@@ -50,7 +43,7 @@ h2 {
   margin-bottom: 10px;
 }
 
-h2:after {
+h2::after {
   content: '';
   position: absolute;
   left: 50%;
