--- a/css/base/header.css
+++ b/css/base/header.css
@@ -45,7 +45,6 @@ header {
 
 .ham {
   display: none;
-  z-index: 99;
 }
 
 @media only screen and (max-width: 600px) {
@@ -54,7 +53,6 @@ header {
     font-size: 2.5rem;
     text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
     color: var(--clr-primary-300);
-    z-index: 99;
   }
 
   .menu {
@@ -100,7 +98,9 @@ header {
   }
 
   .ham {
+    position: relative;
     display: table;
+    z-index: 99;
   }
 
   .ham span {
