contact page style & minor changes

--- a/css/base/header.css
+++ b/css/base/header.css
@@ -29,18 +29,29 @@ header {
   justify-content: right;
 }
 
-.menu-link {
+.menu li {
   display: inline-block;
   padding-inline: 0.3125em;
   line-height: 2.50em;
   font-family: var(--ff-menu);
   font-size: 1.125rem;
   color: var(--clr-primary-300);
+  text-align: center;
 }
 
-.menu-link:hover,
-.menu-link:focus {
-  background-color: var(--clr-primary-700);
+.menu li::after {
+  content: '';
+  width: 0%;
+  height: 0.125em;
+  background-color: var(--clr-primary-300);
+  display: block;
+  margin: auto;
+  transition: .5s;
+}
+
+.menu li:hover::after,
+.menu li:focus::after {
+  width: 80%;
 }
 
 .ham {
@@ -53,6 +64,10 @@ header {
     font-size: 2.5rem;
     text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
     color: var(--clr-primary-300);
+  }
+
+  .navbar {
+    padding-right: 1em;
   }
 
   .menu {
@@ -68,6 +83,8 @@ header {
     transition: transform 0.3s ease-in;
     transform: translate(100%);
     z-index: 98;
+    display: flex;
+    align-items: center;
   }
 
   .menu::before {
@@ -80,21 +97,13 @@ header {
     filter: blur(10px);
   }
 
-  .menu-link {
-    width: 100%;
-  }
-
-  .menu-link:hover,
-  .menu-link:focus {
-    font-weight: bold;
+  .menu li,
+  .menu li {
+    width: max-content;
   }
 
   .menu-change {
     transform: translate(0%);
-  }
-
-  .navbar {
-    padding-right: 1em;
   }
 
   .ham {
