--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,17 @@ body {
 
 main {
   flex-grow: 1;
-  margin-block: 3em;
+  margin: 2em 1em;
+}
+
+@media only screen and (min-width: 600px) {
+  main {
+    margin: 3em 2em;
+  }
+}
+
+ul {
+  list-style-type: none;
 }
 
 a {
@@ -52,6 +62,6 @@ a {
   cursor: pointer;
 }
 
-ul {
-  list-style-type: none;
+button {
+  cursor: pointer;
 }
