--- a/css/apl/christmas.css
+++ b/css/apl/christmas.css
@@ -1,10 +1,10 @@
-.hide {
-  display: none;
-}
-
-h1 {
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-  margin-bottom: 1.5em;
+  gap: 1em;
+  margin-bottom: 2em;
 }
 
 .section {
@@ -22,34 +22,32 @@ h1 {
   gap: 1em;
 }
 
-.input__btn {
-  font-family: var(--ff-primary);
-  color: var(--clr-neutral-1000);
+.input button,
+.output button{
+  color: #fff;
   width: 10em;
   border-radius: 15px;
+  border: none;
   padding: .7em 1em;
   font-size: 1em;
-  background: #C8C66C;
+}
+
+.input__btn {
+  background: #008000;
 }
 
 .input__text,
 .output__text {
   white-space: pre;
   font-family: var(--ff-code-APL);
+  resize: none;
 }
 
 .output__btn {
-  font-family: var(--ff-primary);
-  color: var(--clr-neutral-000);
-  width: 10em;
-  border-radius: 15px;
-  padding: .7em 1em;
-  font-size: 1em;
-  background: red;
+  background: #e62020;
 }
 
 .output__text {
-  resize: none;
   pointer-events: none;
 }
 
