--- a/css/apl/logic_games/logic_games.css
+++ b/css/apl/logic_games/logic_games.css
@@ -1,7 +1,3 @@
-main {
-  margin-inline: 1.5em;
-}
-
 .cards {
   margin: 0 auto;
   max-width: 1200px;
@@ -21,7 +17,19 @@ main {
   box-shadow: 0 0 2em rgba(0, 0, 0, .3);
 }
 
+
+.card h2 {
+  font-size: 2rem;
+  color: var(--clr-primary-900);
+}
+
 .card__img {
   width: 80%;
   aspect-ratio: 1;
+}
+
+@media only screen and (min-width: 600px) {
+  .card h2 {
+    font-size: 1.5rem;
+  }
 }
