--- a/css/base/header.css
+++ b/css/base/header.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   align-items: center;
-  height: 6.25em;
+  height: 12vh;
   background: var(--clr-primary-900);
 }
 
@@ -12,7 +12,7 @@ header {
 
 .name {
   font-family: var(--ff-accent);
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
   color: var(--clr-primary-300);
   z-index: 99;
@@ -25,113 +25,128 @@ header {
   padding-right: 1em;
 }
 
+.ham {
+  position: relative;
+  display: table;
+  z-index: 99;
+}
+
+.ham span {
+  display: block;
+  width: 1.7em;
+  height: 0.1875em;
+  margin: 0.3125em auto;
+  background-color: var(--clr-primary-300);
+  box-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+}
+
+.change {
+  position: fixed;
+  top: 1.8em;
+  right: 1em;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  pointer-events: none;
+}
+
+.change .bar1 {
+  transform: rotate(45deg) translate(8px, 3px);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  transform: rotate(-45deg) translate(8px, -3px);
+}
+
 .menu {
   display: flex;
-  justify-content: right;
+  flex-direction: column;
+  height: 100%;
+  background-color: rgba(255, 60, 56, .75);
+  z-index: 98;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 6.25em 1em 0 1em;
+  transition: transform 0s ease-in;
+  transform: translate(100%);
+  min-width: 50%;
+}
+
+.menu-change {
+  transform: translate(0);
+}
+
+.menu-change::before {
+  content: '';
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  inset: 0;
+  box-shadow: var(inset 0 0 2000px rgba(255, 60, 56, .75));
+  filter: blur(10px);
 }
 
 .menu li {
-  display: inline-block;
   padding-inline: 0.3125em;
   line-height: 2.50em;
-  font-family: var(--ff-menu);
   font-size: 1.125rem;
   color: var(--clr-primary-300);
-  text-align: center;
 }
 
-.menu li::after {
+.menu li a::after {
   content: '';
-  width: 0%;
+  width: 0;
   height: 0.125em;
   background-color: var(--clr-primary-300);
   display: block;
-  margin: auto;
   transition: .5s;
 }
 
-.menu li:hover::after,
-.menu li:focus::after {
-  width: 80%;
+.menu li a:hover::after,
+.menu li a:focus::after {
+  width: 50%;
 }
 
-.ham {
-  display: none;
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .name {
-    font-family: var(--ff-accent);
-    font-size: 2.5rem;
-    text-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
-    color: var(--clr-primary-300);
-  }
-
-  .navbar {
-    padding-right: 1em;
+    font-size: 2.8rem;
   }
 
   .menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    padding-top: 6.25em;
-    width: 50%;
-    height: 100%;
-    flex-direction: column;
-    background-color: rgba(255, 60, 56, .75);
-    overflow: hidden;
-    transition: transform 0.3s ease-in;
-    transform: translate(100%);
-    z-index: 98;
-    display: flex;
-    align-items: center;
+    position: unset;
+    min-width: unset;
+    padding: 0;
+    flex-direction: unset;
+    transform: unset;
   }
 
   .menu::before {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    inset: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 60, 56, .75);
-    filter: blur(10px);
+    all: unset;
   }
 
-  .menu li,
   .menu li {
-    width: max-content;
+    flex-direction: column;
+    padding-inline: 1em;
   }
 
-  .menu-change {
-    transform: translate(0%);
+  .menu li a::after {
+    margin: auto;
+  }
+
+  .menu li a:hover::after,
+  .menu li a:focus::after {
+    width: 80%;
   }
 
   .ham {
-    position: relative;
-    display: table;
-    z-index: 99;
-  }
-
-  .ham span {
-    display: block;
-    width: 1.7em;
-    height: 0.1875em;
-    margin: 0.3125em auto;
-    background-color: var(--clr-primary-300);
-    box-shadow: 0.125em 0.125em 0 rgba(0, 0, 0, 0.1);
-    transition: 0.4s;
-  }
-
-  .change .bar1 {
-    transform: rotate(45deg) translate(8px, 3px);
-  }
-
-  .change .bar2 {
-    opacity: 0;
-  }
-
-  .change .bar3 {
-    transform: rotate(-45deg) translate(8px, -3px);
+    display: none;
   }
 }
