--- a/css/contact_me.css
+++ b/css/contact_me.css
@@ -1,7 +1,3 @@
-main {
-  padding-inline: 1em;
-}
-
 .contact-box {
   max-width: 53.125em;
   display: grid;
@@ -9,28 +5,19 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: var(--clr-neutral-000);
+  background-color: #fff;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
   margin: auto;
-}
-
-.left {
-  background: url('/img/contact_me.jpg') no-repeat center;
-  background-size: cover;
-  height: 100%;
-}
-
-.right {
   padding: 25px 40px;
 }
 
-h2 {
+.contact-box h2 {
   position: relative;
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
 
-h2::after {
+.contact-box h2::after {
   content: '';
   position: absolute;
   left: 50%;
@@ -42,8 +29,20 @@ h2::after {
   background-color: var(--clr-primary-900);
 }
 
-form input,
-form textarea {
+.contact-box section:first-child p u {
+  color: var(--clr-primary-900);
+}
+
+.contact-box section:first-child p:first-of-type {
+  margin-top: 2em;
+}
+
+.contact-box section:first-child p:last-of-type {
+  margin-bottom: 2em;
+}
+
+.contact-box form input,
+.contact-box form textarea {
   width: 100%;
   outline: none;
   color: rgba(0, 0, 0, 0.8);
@@ -55,14 +54,14 @@ form textarea {
   transition: .3s;
 }
 
-form input:hover,
-form input:focus,
-form textarea:hover,
-form textarea:focus {
+.contact-box input:hover,
+.contact-box input:focus,
+.contact-box textarea:hover,
+.contact-box textarea:focus {
   background-color: var(--clr-primary-100);
 }
 
-form textarea {
+.contact-box textarea {
   min-height: 9.375em;
   max-width: 45.75em;
   resize: none;
@@ -70,37 +69,39 @@ form textarea {
   -ms-overflow-style: none;
 }
 
-form textarea::-webkit-scrollbar {
+.contact-box textarea::-webkit-scrollbar {
   display: none;
 }
 
-form input:not(:placeholder-shown),
-form textarea:not(:placeholder-shown) {
+.contact-box input:not(:placeholder-shown),
+.contact-box textarea:not(:placeholder-shown) {
   background-color: var(--clr-primary-300);
 }
 
-form input:valid,
-form textarea:valid {
+.contact-box input:valid,
+.contact-box textarea:valid {
   background-color: var(--clr-primary-100);
 }
 
-form button {
+.contact-box button {
   width: 100%;
   padding: 0.5rem 1rem;
   background-color: var(--clr-primary-700);
-  color: var(--clr-neutral-000);
+  color: #fff;
   font-size: 1.1rem;
   border: none;
   outline: none;
   transition: .3s;
 }
 
-form button:focus {
+.contact-box button:hover,
+.contact-box button:focus {
   background-color: var(--clr-primary-900);
 }
 
 .file__input {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   gap: 1em;
   width: 100%;
@@ -134,9 +135,5 @@ form button:focus {
 @media screen and (max-width: 768px) {
   .contact-box {
     grid-template-columns: 1fr;
-  }
-
-  .left {
-    height: 200px;
   }
 }
