--- a/css/apl/logic_games/puzzle.css
+++ b/css/apl/logic_games/puzzle.css
@@ -1,3 +1,19 @@
+@media only screen and (max-width: 1049px) {
+  .hide-on-mobile {
+    display: none;
+  }
+
+  .view-on-mobile {
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 1050px) {
+  .view-on-mobile {
+    display: none;
+  }
+}
+
 .cards {
   margin: 0 auto;
   max-width: 1200px;
@@ -22,28 +38,12 @@ input[type=number] {
   caret-color: transparent;
 }
 
-.intro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 1em;
-  margin-bottom: 2em;
+h1 {
+  width: fit-content;
+  margin: 0 auto 1em;
 }
 
 /* Input section */
-.contact-box form input {
-  width: 100%;
-  outline: none;
-  color: rgba(0, 0, 0, 0.8);
-  border: .2em solid var(--clr-primary-300);
-  background-color: var(--clr-primary-300);
-  padding: 0.5rem .75em;
-  font-size: 1.1rem;
-  margin-bottom: 22px;
-  transition: .3s;
-}
-
 .input__dimension {
   width: 100%;
   display: flex;
@@ -70,18 +70,14 @@ input[type=number] {
   border-radius: 0 5px 5px 0;
 }
 
-.input__table,
-.output__table,
-.try__table {
+table {
   display: flex;
   justify-content: center;
   overflow: auto;
   white-space: nowrap;
 }
 
-.input__table input,
-.output__table input,
-.try__table input {
+table input {
   font-size: 1.1em;
   width: 2em;
   aspect-ratio: 1;
@@ -144,10 +140,9 @@ input[type=number] {
   background-color: var(--clr-primary-300);
 }
 
-.output__label,
-.try__label {
+.output h2,
+.try h2 {
   line-height: 2.25;
-  font-weight: bold;
   color: #4169e1;
   font-size: 1.5em;
 }
@@ -160,5 +155,3 @@ input[type=number] {
 .btns__verify:focus {
   background-color: #4169e1;
 }
-
-@media only screen and (min-width: 600px) {}
