--- a/css/apl/animations/christmas.css
+++ b/css/apl/animations/christmas.css
@@ -22,32 +22,62 @@
   gap: 1em;
 }
 
+.input div,
+.output div {
+  display: flex;
+  flex-direction: column;
+  max-width: 15em;
+  width: 80%;
+  gap: 1em;
+}
+
 .input button,
-.output button{
+.output button {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  background-color: #fff;
+  transition: .3s;
+}
+
+.input button,
+.input textarea {
+  border: 2px solid #4169e1;
+}
+
+.input button:hover,
+.input button:focus {
+  background-color: #4169e1;
+}
+
+.output button,
+.output textarea {
+  border: 2px solid #e62020;
+}
+
+.output button:hover,
+.output button:focus {
+  background-color: #e62020;
+}
+
+/* .input button,
+.output button {
   color: #fff;
   width: 10em;
   border-radius: 15px;
   border: none;
   padding: .7em 1em;
   font-size: 1em;
-}
+} */
 
-.input__btn {
-  background: #008000;
-}
-
-.input__text,
-.output__text {
+textarea {
   white-space: pre;
   font-family: var(--ff-code-APL);
   resize: none;
 }
 
-.output__btn {
-  background: #e62020;
-}
-
-.output__text {
+output textarea {
   pointer-events: none;
 }
 
