--- a/css/apl/animations/happy_new_year.css
+++ b/css/apl/animations/happy_new_year.css
@@ -14,20 +14,35 @@
   gap: 1em;
 }
 
+.input div {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 15em;
+  width: 80%;
+  gap: 1em;
+}
+
 .input button {
-  color: #fff;
-  width: 10em;
-  border-radius: 15px;
-  border: none;
-  padding: .7em 1em;
-  font-size: 1em;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  background-color: #fff;
+  transition: .3s;
 }
 
-.input__btn {
-  background: #008000;
+.input button,
+.input textarea {
+  border: 2px solid #4169e1;
 }
 
-.input__text {
+.input button:hover,
+.input button:focus {
+  background-color: #4169e1;
+}
+
+.input textarea {
   pointer-events: none;
   white-space: pre;
   font-family: var(--ff-code-APL);
