--- a/css/dyalog-apl.css
+++ b/css/dyalog-apl.css
@@ -8,8 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  padding-inline: .5em;
-  padding-block: 3em;
+  padding: 1em .5em;
   background-color: var(--clr-primary-000);
   border-left: 6px solid var(--clr-primary-900);
   text-align: center;
