--- a/css/apl/logic_games/puzzle.css
+++ b/css/apl/logic_games/puzzle.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1049px) {
+@media only screen and (max-width: 1030px) {
   .hide-on-mobile {
     display: none;
   }
@@ -8,7 +8,7 @@
   }
 }
 
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 1031px) {
   .view-on-mobile {
     display: none;
   }
@@ -29,12 +29,12 @@
   gap: 1em;
 }
 
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
-.input__table input[type=number],
-.try__table input[type=number] {
+.input__table input[type="number"],
+.try__table input[type="number"] {
   caret-color: transparent;
 }
 
@@ -53,7 +53,7 @@ h1 {
 }
 
 .dimension__value {
-  padding: 0.5rem .75em;
+  padding: 0.5rem 0.75em;
   border: 1px solid var(--clr-primary-900);
   border-right: none;
   border-radius: 5px 0 0 5px;
@@ -85,8 +85,7 @@ table input {
   text-align: center;
 }
 
-.input__btns,
-.try__btns {
+.input__btns {
   display: flex;
   flex-direction: column;
   max-width: 15em;
@@ -94,14 +93,13 @@ table input {
   gap: 1em;
 }
 
-.input__btns button,
-.try__btns button {
+.input__btns button {
   width: 100%;
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
   border-radius: 5px;
   background-color: #fff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .btns__solve {
@@ -140,6 +138,7 @@ table input {
   background-color: var(--clr-primary-300);
 }
 
+/* Output Section */
 .output h2,
 .try h2 {
   line-height: 2.25;
@@ -147,11 +146,42 @@ table input {
   font-size: 1.5em;
 }
 
-.btns__verify {
+/* Try section */
+.try__btns {
+  display: flex;
+  gap: 0.25em;
+  width: 80%;
+  max-width: 15em;
+}
+
+.try__btns button {
+  padding: 0.5rem;
+  font-size: 1.1rem;
+  background-color: #fff;
   border: 2px solid #4169e1;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.btns__verify {
+  flex-grow: 1;
 }
 
 .btns__verify:hover,
 .btns__verify:focus {
   background-color: #4169e1;
+}
+
+.btns__mode {
+  aspect-ratio: 1;
+}
+
+.try__btns input {
+  font-size: 1.1em;
+  width: 2em;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  outline: none;
 }
