--- a/css/apl/logic_games/puzzle.css
+++ b/css/apl/logic_games/puzzle.css
@@ -33,11 +33,6 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-.input__table input[type="number"],
-.try__table input[type="number"] {
-  caret-color: transparent;
-}
-
 h1 {
   width: fit-content;
   margin: 0 auto 1em;
@@ -71,18 +66,36 @@ h1 {
 }
 
 table {
-  display: flex;
-  justify-content: center;
+  background-color: #fff;
+  border-collapse: collapse;
   overflow: auto;
   white-space: nowrap;
 }
 
-table input {
-  font-size: 1.1em;
+td {
   width: 2em;
-  aspect-ratio: 1;
-  margin: 0.0625em;
+  height: 2em;
+  border: 1px solid #20202055;
+  border-right: none;
+  border-bottom: none;
   text-align: center;
+  font-size: 1.1em;
+}
+
+table tr td:first-child {
+  border-left: 2px solid #000;
+}
+
+table tr:first-child td {
+  border-top: 2px solid #000;
+}
+
+table tr td:last-child {
+  border-right: 2px solid #000;
+}
+
+table tr:last-child td {
+  border-bottom: 2px solid #000;
 }
 
 .input__btns {
@@ -173,6 +186,7 @@ table input {
 }
 
 .btns__mode {
+  height: 100%;
   aspect-ratio: 1;
 }
 
