--- a/css/apl/logic_games/puzzle.css
+++ b/css/apl/logic_games/puzzle.css
@@ -1,17 +1,5 @@
-@media only screen and (max-width: 1030px) {
-  .hide-on-mobile {
-    display: none;
-  }
-
-  .view-on-mobile {
-    text-align: center;
-  }
-}
-
-@media only screen and (min-width: 1031px) {
-  .view-on-mobile {
-    display: none;
-  }
+button {
+  outline: none;
 }
 
 .cards {
@@ -36,6 +24,47 @@ input[type="number"] {
 h1 {
   width: fit-content;
   margin: 0 auto 1em;
+}
+
+/* Table */
+.input__table,
+.output__table,
+.try__table {
+  width: 100%;
+  overflow: auto;
+}
+
+table {
+  margin-inline: auto;
+  border-collapse: collapse;
+  white-space: nowrap;
+}
+
+td {
+  line-height: 40px;
+  min-width: 40px;
+  border: 1px solid #20202055;
+  border-right: none;
+  border-bottom: none;
+  text-align: center;
+  font-size: 1.1em;
+  outline: none;
+}
+
+table tr td:first-child {
+  border-left: 2px solid #000;
+}
+
+table tr:first-child td {
+  border-top: 2px solid #000;
+}
+
+table tr td:last-child {
+  border-right: 2px solid #000;
+}
+
+table tr:last-child td {
+  border-bottom: 2px solid #000;
 }
 
 /* Input section */
@@ -65,37 +94,9 @@ h1 {
   border-radius: 0 5px 5px 0;
 }
 
-table {
-  background-color: #fff;
-  border-collapse: collapse;
-  white-space: nowrap;
-}
-
-td {
-  width: 2em;
-  height: 2em;
-  border: 1px solid #20202055;
-  border-right: none;
-  border-bottom: none;
-  text-align: center;
-  font-size: 1.1em;
-  outline: none;
-}
-
-table tr td:first-child {
-  border-left: 2px solid #000;
-}
-
-table tr:first-child td {
-  border-top: 2px solid #000;
-}
-
-table tr td:last-child {
-  border-right: 2px solid #000;
-}
-
-table tr:last-child td {
-  border-bottom: 2px solid #000;
+.dimension__button:hover,
+.dimension__button:focus {
+  background-color: var(--clr-primary-500);
 }
 
 .input__btns {
