--- a/css/apl/logic_games/index.css
+++ b/css/apl/logic_games/index.css
@@ -14,21 +14,53 @@
   padding-block: 1.5em;
   overflow: hidden;
   border-radius: 0.875em;
-  box-shadow: 0 0 2em rgba(0, 0, 0, .3);
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.3);
 }
 
 .card h2 {
-  font-size: 2rem;
+  font-size: 1.1rem;
   color: var(--clr-primary-900);
 }
 
-.card__img {
+@media only screen and (max-width: 599px) {
+  .card h2 {
+    font-size: 1.7rem;
+  }
+}
+
+.card__preview {
   width: 80%;
   aspect-ratio: 1;
 }
 
-@media only screen and (min-width: 600px) {
-  .card h2 {
-    font-size: 1.5rem;
-  }
+table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+  aspect-ratio: 1;
+}
+
+td {
+  border: 1px solid #20202055;
+  border-right: none;
+  border-bottom: none;
+  text-align: center;
+  /* font-size: 1.1em; */
+  outline: none;
+}
+
+table tr td:first-child {
+  border-left: 2px solid #000;
+}
+
+table tr:first-child td {
+  border-top: 2px solid #000;
+}
+
+table tr td:last-child {
+  border-right: 2px solid #000;
+}
+
+table tr:last-child td {
+  border-bottom: 2px solid #000;
 }
