--- a/css/apl/logic_games/index.css
+++ b/css/apl/logic_games/index.css
@@ -38,29 +38,17 @@ table {
   border-collapse: collapse;
   width: 100%;
   aspect-ratio: 1;
+  border: 1px solid #000;
 }
 
 td {
-  border: 1px solid #20202055;
+  border: 1px dashed #20202055;
   border-right: none;
   border-bottom: none;
   text-align: center;
-  /* font-size: 1.1em; */
   outline: none;
-}
-
-table tr td:first-child {
-  border-left: 2px solid #000;
-}
-
-table tr:first-child td {
-  border-top: 2px solid #000;
-}
-
-table tr td:last-child {
-  border-right: 2px solid #000;
-}
-
-table tr:last-child td {
-  border-bottom: 2px solid #000;
+  font-size: 0.8em;
+  background-size: 72%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
