--- a/css/apl/logic_games/puzzle.css
+++ b/css/apl/logic_games/puzzle.css
@@ -43,7 +43,7 @@ table {
 td {
   line-height: 40px;
   min-width: 40px;
-  border: 1px solid #20202055;
+  border: 1px dashed #20202055;
   border-right: none;
   border-bottom: none;
   text-align: center;
@@ -51,20 +51,27 @@ td {
   outline: none;
 }
 
+td,
+.btns__mode {
+  background-size: 72%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 table tr td:first-child {
-  border-left: 2px solid #000;
+  border-left: 1px solid #000;
 }
 
 table tr:first-child td {
-  border-top: 2px solid #000;
+  border-top: 1px solid #000;
 }
 
 table tr td:last-child {
-  border-right: 2px solid #000;
+  border-right: 1px solid #000;
 }
 
 table tr:last-child td {
-  border-bottom: 2px solid #000;
+  border-bottom: 1px solid #000;
 }
 
 /* Input section */
