--- a/css/apl/logic_games/index.css
+++ b/css/apl/logic_games/index.css
@@ -42,7 +42,7 @@ table {
 }
 
 td {
-  border: 1px dashed #20202055;
+  border: 1px solid #20202055;
   border-right: none;
   border-bottom: none;
   text-align: center;
